fix: overflowing dividers on mobile

--- a/components/IndexTabs/IndexTabs.scss
+++ b/components/IndexTabs/IndexTabs.scss
@@ -37,6 +37,22 @@
             }
         }
 
+        >.tab::after {
+            content: "";
+            position: absolute;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 1px;
+            background-color: rgba(231, 232, 233, 0);
+            transition: background-color 0.2s ease;
+
+            @at-root [data-show-border="true"]#{&} {
+                background-color: rgba(231, 232, 233, 1);
+            }
+        }
+
         >.current_tab_indicator {
             position: absolute;
             bottom: var(--ghost-padding);
